--- a/Public/css/shop.css
+++ b/Public/css/shop.css
@@ -36,6 +36,9 @@ body{background: #F0E7E4;padding-bottom: 10px;}
 .orange-btn{background: orange;}
 .green-btn{background: #09BB07;}
 
+.loading{width: 20px;height: 20px;display: block;position: fixed;z-index: 5;left: 50%;top:50%;margin-top: -10px;margin-left: -10px;}
+.loading img{width: 100%;}
+
 .total-price-box{text-align: right;margin: 10px;}
 .bottom-tip{margin-top: 30px; font-size: 12px;color: #666666;text-align: center;}
 
