--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -52,8 +52,8 @@
                     //alert(res.err_code+res.err_desc+res.err_msg);
                     alert('支付成功');
                     setTimeout(function(){
-                        window.location.href = "{:UC('Goods/orderList')}";
-                    },2000);
+                        window.location.href = "{:UC('Goods/orderdetail',array('id'=>$order_id']))}";
+                    },1000);
                 }
             );
             }
