--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -25,7 +25,7 @@
             <div class="small-text">
                 夏天是喝苹果醋<strong class="main-color">最好的季节</strong>。<br>
                 古训：<strong>“少盐多醋，长寿之道”</strong>。
-                看电视，玩游戏的您，要是旁边有一杯香浓的<strong class="main-color">苹果醋</strong>，不仅能<strong class="main-color">消除一天的疲劳</strong>，还能<strong class="main-color">增强体质，养颜美容</strong>。<br>
+                经过一天劳累的您，要是旁边有一杯香浓的<strong class="main-color">苹果醋</strong>，不仅能<strong class="main-color">消除一天的疲劳</strong>，还能<strong class="main-color">增强体质，养颜美容</strong>。<br>
                 别忘了苹果醋还能<strong class="main-color">解酒</strong>。<br>
                 我们为您精选了<strong class="main-color">优质</strong>的苹果醋品牌，下单后即刻送到您的家门。
                 <strong>仅派送北流市区</strong>，电话和微信:<a href="tel:18176621816">18176621816</a>
