--- a/Public/css/shop.css
+++ b/Public/css/shop.css
@@ -22,6 +22,9 @@ body{background: #F0E7E4;padding-bottom: 10px;}
 .blue-text{color: #006699;}
 .main-color{color:#AF9083;}
 
+
+.link{color: #006699;text-decoration: underline;}
+
 .panel{background: #FFFFFF;}
 
 .border-bottom{border-bottom: solid 1px #AF9083;}
