--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -49,11 +49,16 @@
                         payConfig,
                 function(res){
                     WeixinJSBridge.log(res.err_msg);
+                    if(res.err_msg == "get_brand_wcpay_request：ok" ){
+                        alert('支付成功');
+                        setTimeout(function(){
+                            window.location.href = "{:UC('Goods/orderdetail',array('id'=>$order_id))}";
+                        },1000);
+                    }else{
+                        alert('您取消支付了');
+                    }
                     //alert(res.err_code+res.err_desc+res.err_msg);
-                    alert('支付成功');
-                    setTimeout(function(){
-                        window.location.href = "{:UC('Goods/orderdetail',array('id'=>$order_id))}";
-                    },1000);
+
                 }
             );
             }
