--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -9,9 +9,9 @@
         <div class="panel box margin-top flex flex-align-center" id="selectAddress">
             <div class="flex-1" id="addressBox">
             <if condition="$address">
-                姓名：{$address['userName']}<br>
-                电话：{$address['telNumber']}<br>
-                地址：{$address['detailInfo']}
+                姓名：{$address['username']}<br>
+                电话：{$address['telnumber']}<br>
+                地址：{$address['detailinfo']}
                 <else/>
                 点击选择配送地址<span class="small-text" data-temp="1">（仅限北流市区）</span>
             </if>
