--- a/Application/Phone/View/User/index.html
+++ b/Application/Phone/View/User/index.html
@@ -17,6 +17,10 @@
             </div>
 
             <div class="yspanel margin-top">
+                <a class="yspanel-line block" href="{:UC('Goods/orderList')}">
+                    我的订单
+                    <div style="float: right"> &gt </div>
+                </a>
                 <a class="yspanel-line block" href="{:UC('User/couponUser')}">
                     我的优惠券
                     <div style="float: right"> &gt </div>
