--- a/Application/Phone/View/Goods/template.html
+++ b/Application/Phone/View/Goods/template.html
@@ -18,6 +18,7 @@
 
 <div class="bottom-tip">店多多，汇聚您身边的精彩</div>
 
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=56290858" charset="UTF-8"></script>
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='__PUBLIC__/js/swiper.min.js' charset='utf-8'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
