--- a/Application/Phone/View/Goods/orderList.html
+++ b/Application/Phone/View/Goods/orderList.html
@@ -23,7 +23,7 @@
                                 <if condition="$info['pay_time']">
                                     <div class="green-text">已支付</div>
                                     <else/>
-                                    <div class="orange-text">已支付</div>
+                                    <div class="orange-text">未支付</div>
                                 </if>
                             </if>
                         </if>
