--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -61,10 +61,9 @@
                             window.location.href = "{:UC('Goods/orderdetail',array('id'=>$order_id))}";
                         },1000);
                     }else{
-                        alert(res.err_code+res.err_desc+res.err_msg);
+                        //alert(res.err_code+res.err_desc+res.err_msg);
                         alert('您取消支付了');
                     }
-
                 }
             );
             }
