--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -61,8 +61,8 @@
                             window.location.href = "{:UC('Goods/orderdetail',array('id'=>$order_id))}";
                         },1000);
                     }else{
-                        //alert(res.err_code+res.err_desc+res.err_msg);
-                        alert('您取消支付了');
+                        alert(res.err_code+res.err_desc+res.err_msg);
+                        alert('支付取消');
                     }
                 }
             );
