--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -61,7 +61,7 @@
             <div class="small-text">（含配送费）</div>
         </div>
         <div class="margin-top">
-            <a class="btn green-btn" href="javascript:void(0);" id="commitBtn">网上购买</a>
+            <a class="btn green-btn" href="javascript:void(0);" id="commitBtn">微信购买</a>
             <br>
             <a class="btn main-btn" href="tel:18176621816">电话购买</a>
         </div>
