--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -8,6 +8,10 @@
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
             <div class="swiper-slide">
+                <img data-src="http://media.dianduoduo.top/collect/suoye1.jpg" class="swiper-lazy respImg">
+                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+            </div>
+            <div class="swiper-slide">
                 <img data-src="http://media.dianduoduo.top/collect/suoye2.jpg" class="swiper-lazy respImg">
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
@@ -71,7 +75,12 @@
     <div class="panel text-center box margin-top30">
         <div class="main-color box small-text">详细说明</div>
         <img data-src="http://media.dianduoduo.top/collect/xianxi1.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xianxi2.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi4.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi5.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi6.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xiao1.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xiao6.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xiao7.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/suoye2.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/suoye3.jpg" width="100%" class="lazyload">
         <p>欢迎您品尝</p>
