--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -74,13 +74,13 @@
 
     <div class="panel text-center box margin-top30">
         <div class="main-color box small-text">详细说明</div>
-        <img data-src="http://media.dianduoduo.top/collect/xianxi1.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xianxi4.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xianxi5.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xianxi6.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xiaoxi7.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi1.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi4.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xiao1.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xiao6.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xiao7.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/suoye2.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/suoye3.jpg" width="100%" class="lazyload">
         <p>欢迎您品尝</p>
