--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -4,10 +4,6 @@
     <div class="swiper-container" data-space-between='10'>
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img data-src="http://media.dianduoduo.top/collect/lixBKL5GwBYnY.jpg" class="swiper-lazy respImg">
-                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-            </div>
-            <div class="swiper-slide">
                 <img data-src="http://media.dianduoduo.top/collect/suoye1.jpg" class="swiper-lazy respImg">
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
@@ -19,11 +15,25 @@
                 <img data-src="http://media.dianduoduo.top/collect/suoye3.jpg" class="swiper-lazy respImg">
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
+            <div class="swiper-slide">
+                <img data-src="http://media.dianduoduo.top/collect/suoye01.png" class="swiper-lazy respImg">
+                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+            </div>
+            <div class="swiper-slide">
+                <img data-src="http://media.dianduoduo.top/collect/suoye02.png" class="swiper-lazy respImg">
+                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+            </div>
+            <!--
+            <div class="swiper-slide">
+                <img data-src="http://media.dianduoduo.top/collect/lixBKL5GwBYnY.jpg" class="swiper-lazy respImg">
+                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+            </div>
+            -->
         </div>
         <div class="swiper-pagination"></div>
     </div>
 
-    <div class="panel">
+    <div class="panel" style="border-bottom:1px solid #f00b0d">
         <div class="box">
             <h3 class="text-center orange-text main-size">夏日清凉-苹果醋</h3>
             <div class="small-text">
@@ -40,7 +50,6 @@
             </p>
         </div>
     </div>
-
 
     <div class="inline-box">
         <div class="main-color margin-top margin-box small-text">可选大小：</div>
@@ -62,7 +71,7 @@
 
         <div class="text-right" style="margin: 15px 0;">
             <div>总计：￥<span class="blank-text total_price"></span></div>
-            <div class="small-text">（含配送费）</div>
+            <div class="small-text">（免配送费）</div>
         </div>
         <div class="margin-top">
             <a class="btn green-btn" href="javascript:void(0);" id="commitBtn">微信购买</a>
@@ -72,17 +81,14 @@
     </div>
 
 
-    <div class="panel text-center box margin-top30">
+    <div class="panel text-center box margin-top30" style="border-top:1px solid #f00b0d">
         <div class="main-color box small-text">详细说明</div>
         <img data-src="http://media.dianduoduo.top/collect/xianxi4.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xianxi5.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xianxi6.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xiaoxi7.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xianxi1.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/xiao1.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi6.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/xiao6.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/suoye2.jpg" width="100%" class="lazyload">
-        <img data-src="http://media.dianduoduo.top/collect/suoye3.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/xianxi1.jpg" width="100%" class="lazyload">
         <p>欢迎您品尝</p>
     </div>
 </block>
