--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -20,7 +20,7 @@
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
             <div class="swiper-slide">
-                <img data-src="http://media.dianduoduo.top/collect/suoye02.png" class="swiper-lazy respImg">
+                <img data-src="http://media.dianduoduo.top/collect/suoye02.jpg" class="swiper-lazy respImg">
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
             <!--
