--- a/Application/Phone/View/Goods/mygoods2.html
+++ b/Application/Phone/View/Goods/mygoods2.html
@@ -19,10 +19,9 @@
         <div class="box">
             <h3 class="text-center orange-text main-size">夏日清凉-红枣醋</h3>
             <div class="small-text">
-                夏天是喝红枣醋<strong class="main-color">最好的季节</strong>。<br>
-                古训：<strong>“少盐多醋，长寿之道”</strong>。
-                经过一天劳累的您，要是旁边有一杯香浓的<strong class="main-color">红枣醋</strong>，不仅能<strong class="main-color">消除一天的疲劳</strong>，还能<strong class="main-color">增强体质，养颜美容</strong>。<br>
-                别忘了红枣醋还能<strong class="main-color">解酒</strong>。<br>
+                古训：<strong>“少盐多醋，长寿之道”</strong>。<br>
+                红枣醋兼备了红枣和醋的益处。红枣<strong class="main-color">补气养血</strong>，醋的优点也特别多，具有很强的杀菌能力,增强肝脏机能,促进新陈代谢；扩张血管,有利于<strong class="main-color">降低血压</strong>,防止心血管疾病的发生。<br>
+                红枣醋能够增强肾脏功能,有利尿作用,并能<strong class="main-color">降低尿糖含量</strong>。<br>
                 我们为您精选了<strong class="main-color">优质</strong>的红枣醋品牌，下单后即刻送到您的家门。
                 <strong>仅派送北流市区</strong>，电话和微信:<a href="tel:18176621816" class="link">18176621816</a>
             </div>
@@ -42,7 +41,7 @@
         <div class="panel">
             <div class="flex flex-align-center">
                 <div class="flex-1 box main-color">
-                    红枣醋<span class="size">750毫升</span> × <span class="amount">2</span> 瓶
+                    红枣醋<span class="size">750毫升</span> × <span class="amount">1</span> 瓶
                 </div>
                 <div class="countBox">
                     <span class="minus">减</span>
@@ -150,7 +149,7 @@
             });
             wx.onMenuShareAppMessage({
                 title: '夏日清凉-红枣醋',
-                desc: '“少盐多醋，长寿之道”,夏天是喝红枣醋最好的季节。北流市区下单后免费派送。', // 分享描述
+                desc: '红枣醋兼备了红枣和醋的益处。红枣补气养血，醋的优点也特别多，具有很强的杀菌能力,增强肝脏机能,促进新陈代谢；扩张血管,有利于降低血压,防止心血管疾病的发生。', // 分享描述
                 link: window.location.href, // 分享链接
                 imgUrl: 'http://media.dianduoduo.top/pp.jpg', // 分享图标
                 success: function () {
