--- a/Application/Phone/View/Goods/mygoods2.html
+++ b/Application/Phone/View/Goods/mygoods2.html
@@ -23,7 +23,7 @@
                 红枣醋兼备了红枣和醋的益处。红枣<strong class="main-color">补气养血</strong>，醋的优点也特别多，具有很强的杀菌能力,增强肝脏机能,促进新陈代谢；扩张血管,有利于<strong class="main-color">降低血压</strong>,防止心血管疾病的发生。<br>
                 红枣醋能够增强肾脏功能,有利尿作用,并能<strong class="main-color">降低尿糖含量</strong>。<br>
                 我们为您精选了<strong class="main-color">优质</strong>的红枣醋品牌，下单后即刻送到您的家门。<br>
-                购满一件以上按批发价出售（750毫升每件6瓶，650毫升每件12瓶）<br>
+                购满一件以上按批发价出售<br>
                 <strong>仅派送北流市区</strong>，电话和微信:<a href="tel:18176621816" class="link">18176621816</a>
             </div>
             <p class="">
@@ -60,6 +60,7 @@
             <br>
             <a class="btn main-btn" href="tel:18176621816">电话购买</a>
         </div>
+        <p>让利大优惠，买一件以上按批发价出售。</p>
     </div>
 
 
