--- a/Application/Phone/View/Goods/mygoods.html
+++ b/Application/Phone/View/Goods/mygoods.html
@@ -42,7 +42,7 @@
                 经过一天劳累的您，要是旁边有一杯香浓的<strong class="main-color">苹果醋</strong>，不仅能<strong class="main-color">消除一天的疲劳</strong>，还能<strong class="main-color">增强体质，养颜美容</strong>。<br>
                 别忘了苹果醋还能<strong class="main-color">解酒</strong>。<br>
                 我们为您精选了<strong class="main-color">优质</strong>的苹果醋品牌，下单后即刻送到您的家门。<br>
-                购满一件以上按批发价出售（750毫升每件6瓶，650毫升每件12瓶）<br>
+                购满一件以上按批发价出售<br>
                 <strong>仅派送北流市区</strong>，电话和微信:<a href="tel:18176621816" class="link">18176621816</a>
             </div>
             <p class="">
@@ -79,6 +79,7 @@
             <br>
             <a class="btn main-btn" href="tel:18176621816">电话购买</a>
         </div>
+        <p>让利大优惠，买一件以上按批发价出售。</p>
     </div>
 
 
