--- a/Application/Phone/View/Goods/mygoods2.html
+++ b/Application/Phone/View/Goods/mygoods2.html
@@ -69,6 +69,7 @@
         <img data-src="http://media.dianduoduo.top/collect/hongzao2.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/hongzao3.jpg" width="100%" class="lazyload">
         <img data-src="http://media.dianduoduo.top/collect/hongzao4.jpg" width="100%" class="lazyload">
+        <img data-src="http://media.dianduoduo.top/collect/hongzao5.jpg" width="100%" class="lazyload">
         <p>欢迎您品尝</p>
     </div>
 </block>
